--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -3,7 +3,11 @@ on:
   pull_request:
     types: [opened, reopened]
   workflow_dispatch:
-  
+  push:
+    branches:
+      - main
+      - 'dev-*'
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
